# kittypaw

./: .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CONSTRAINTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  TASKS.md  VISION.md  docker-compose.e2e.yml  go.mod  go.sum  go.work  go.work.sum  install.sh  kittypaw.toml.example  lefthook.yml
assets/: KittyPaw.icns
channel/: channel.go  channel_test.go  discord.go  factory.go  kakao.go  slack.go  telegram.go  websocket.go
cli/: account_wizard.go  chat_relay_test.go  cmd_account.go  cmd_account_test.go  cmd_chat_relay.go  cmd_chat_relay_test.go  cmd_family.go  cmd_family_test.go  cmd_login.go  cmd_login_test.go  cmd_service.go  cmd_setup.go  cmd_setup_e2e_test.go  cmd_setup_test.go  cmd_tenant.go  cmd_tenant_test.go  init_wizard.go  init_wizard_test.go  install_script_test.go  main.go  main_test.go  proc_windows.go  server_service_unsupported.go  service_common.go  service_darwin.go  service_linux.go  service_other.go  service_reinstall_linux_test.go  service_reinstall_test.go  tenant_wizard.go  test_tiers_contract_test.go
client/: client.go  daemon.go  daemon_test.go  proc_unix.go  (+3 more)
crates/oochy-llm/: Cargo.toml
crates/oochy-llm/src/: claude.rs  lib.rs  provider.rs
crates/oochy-sandbox/: Cargo.toml
crates/oochy-sandbox/src/: sandbox.rs
crates/oochy-sandbox/tests/: security.rs
services/kakao/: .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  README.ko.md  README.md  fabfile.py
services/kakao/bench/: ws_flood.py
services/kakao/deploy/: env.example  kittykakao.nginx  kittykakao.service  kittyrelay.nginx  kittyrelay.service
services/kakao/src/: main.rs  routes.rs  types.rs
services/kakao/tests/: integration.rs
(+1105 files in other folders)
