[package]
name = "oochy-sandbox"
version.workspace = true
edition.workspace = true

[dependencies]
oochy-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rquickjs = { version = "0.11", features = ["bindgen", "full-async"] }
libc = "0.2"
nix = { version = "0.29", features = ["process", "signal"] }
