[package]
name = "kittypaw-relay"
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"

[[bin]]
name = "kittypaw-relay"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
moka = { version = "0.12", features = ["future"] }
dashmap = "6"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
anyhow = "1"
async-trait = "0.1"
futures-util = "0.3"
url = "2"

[dev-dependencies]
tokio-tungstenite = "0.24"
